# medic-rs

./: .envrc  .gitignore  .rust-toolchain.toml  Brewfile  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
.config/: medic.toml
.github/workflows/: pipeline.yml  pkg.yml
.medic/: config.toml
fixtures/: failure-json-verbose.toml  failure-json.toml  failure-stdio-verbose.toml  failure-stdio.toml  failure-verbose.toml  failure.toml  medic.toml
guides/assets/: audit.cast  doctor.cast  outdated.cast  shipit.cast  test.cast  update.cast
medic/: Cargo.toml
medic-audit/: Cargo.toml
medic-audit/src/: lib.rs  main.rs
medic-audit/src/cli/: app.rs
medic-check/: Cargo.toml
medic-check-asdf/: Cargo.toml  README.md
medic-check-asdf/src/: lib.rs  main.rs
medic-check-asdf/src/cli/: app.rs
medic-check-elixir/: Cargo.toml  README.md
medic-check-elixir/src/: lib.rs  main.rs
medic-check-elixir/src/cli/: app.rs
medic-check-hex/: Cargo.toml
medic-check-hex/src/: lib.rs  main.rs
medic-check-hex/src/cli/: app.rs
medic-check-homebrew/: Cargo.toml
medic-check-homebrew/src/: lib.rs  main.rs
medic-check-homebrew/src/cli/: app.rs  mod.rs
medic-check-npm/: Cargo.toml
medic-check-npm/src/: lib.rs  main.rs
medic-check-npm/src/cli/: app.rs
medic-check-rust/: Cargo.toml
medic-check-rust/src/: lib.rs  main.rs
medic-check-rust/src/cli/: app.rs  mod.rs
medic-check/src/: check.rs  check_result.rs  lib.rs  result.rs
medic-doctor/: Cargo.toml
medic-doctor/src/: lib.rs  main.rs
medic-doctor/src/cli/: app.rs
medic-doctor/src/config/: mod.rs
medic-init/: Cargo.toml
medic-init/src/: lib.rs  main.rs
medic-init/src/cli/: app.rs
medic-lib/: CHANGELOG.md  Cargo.toml  README.md
medic-lib/src/: audit_step.rs  lib.rs  runnable.rs  shipit_step.rs
medic-lib/src/check/: check.rs  mod.rs
medic-lib/src/check_result/: mod.rs
medic-lib/src/config/: manifest.rs  mod.rs
medic-lib/src/step/: mod.rs  shell_config.rs  step.rs  step_config.rs
medic-lib/src/step_result/: mod.rs
medic-outdated/: Cargo.toml
medic-outdated/src/: lib.rs  main.rs
medic-outdated/src/cli/: app.rs
medic-run/: Cargo.toml
medic-run/src/: lib.rs  main.rs
medic-run/src/cli/: app.rs
medic-shipit/: Cargo.toml
medic-shipit/src/: lib.rs  main.rs
medic-shipit/src/cli/: app.rs
medic-src/: Cargo.toml  README.md
medic-src/src/: audit_step.rs  doctor_step.rs  lib.rs  runnable.rs  shipit_step.rs  string_or_list.rs
medic-src/src/app_result/: mod.rs
medic-src/src/audit/: audit_step.rs  mod.rs
medic-src/src/audit_step/: mod.rs
medic-src/src/check/: check_output.rs  check_test.rs  mod.rs  output_format.rs
medic-src/src/cli/: mod.rs
medic-src/src/config/: manifest.rs  manifest_test.rs  mod.rs
medic-src/src/context/: mod.rs
medic-src/src/doctor/: doctor_step.rs  mod.rs
medic-src/src/doctor_step/: mod.rs
medic-src/src/error/: mod.rs
medic-src/src/extra/: command.rs  env.rs  mod.rs
medic-src/src/noop_config/: mod.rs
medic-src/src/optional_styled/: mod.rs
medic-src/src/outdated/: check.rs  check_test.rs  mod.rs  summary.rs  summary_test.rs
medic-src/src/outdated_check/: mod.rs  outdated.rs  outdated_check_test.rs  outdated_test.rs
medic-src/src/progress/: mod.rs
medic-src/src/recoverable/: mod.rs
medic-src/src/runnable/: mod.rs
medic-src/src/shell/: mod.rs  shell_config.rs  shell_config_test.rs  shell_test.rs
medic-src/src/shipit/: mod.rs  shipit_step.rs
medic-src/src/shipit_step/: mod.rs
medic-src/src/step/: mod.rs  step_config.rs  step_config_test.rs
medic-src/src/theme/: mod.rs
medic-src/src/util/: mod.rs
medic-step/: Cargo.toml
medic-step-cargo/: Cargo.toml
medic-step-cargo/src/: lib.rs  main.rs
medic-step-cargo/src/cli/: app.rs
medic-step-elixir/: Cargo.toml
medic-step-elixir/src/: lib.rs  main.rs
medic-step-elixir/src/cli/: app.rs
medic-step-git/: Cargo.toml
medic-step-git/src/: lib.rs  main.rs
medic-step-git/src/cli/: app.rs
medic-step-github/: Cargo.toml
medic-step-github/src/: lib.rs  main.rs
medic-step-github/src/cli/: app.rs
medic-step-rust/: Cargo.toml
medic-step-rust/src/: main.rs
medic-step-rust/src/cli/: app.rs  mod.rs
medic-step/src/: lib.rs  step.rs  step_result.rs
medic-test/: Cargo.toml
medic-test/src/: lib.rs  main.rs
medic-test/src/cli/: app.rs
medic-update/: Cargo.toml
medic-update/src/: lib.rs  main.rs
medic-update/src/cli/: app.rs
medic/src/: lib.rs  main.rs
medic/src/cli/: app.rs
medic/src/config/: manifest.rs  mod.rs
