[workspace]

members = [
    "medic",
    "medic-audit",
    "medic-check-asdf",
    "medic-check-homebrew",
    "medic-doctor",
    "medic-init",
    "medic-lib",
    "medic-shipit",
    "medic-src",
    "medic-step-git",
    "medic-step-github",
    "medic-test",
    "medic-update",
]

[workspace.dependencies]
clap = { version = "4.1.8" }
clap_complete = "4.1.4"
indoc = "2.0.1"
regex = "1.7"
serde = { version = "1.0" }
serde_json = "1.0"
toml = "0.7"
