[workspace]
members = [
    "medic",
    "medic-audit",
    "medic-doctor",
    "medic-init",
    "medic-lib",
    "medic-shipit",
    "medic-src",
    "medic-test",
    "medic-update",
]

[workspace.dependencies]
clap = { version = "4.1.8" }
clap_complete = "4.1.4"
indoc = "2.0.1"
regex = "1.7"
serde = { version = "1.0" }
serde_json = "1.0"
toml = "0.7"

[workspace.package]
authors = ["Eric Saxby <sax@livinginthepast.org>", "synchonal.dev"]
description = "Development workflow automation/suggestion"
edition = "2021"
homepage = "https://github.com/synchronal"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/synchronal/medic-rs"
version = "0.5.0"
