[workspace]
members = [
    "medic",
    "medic-audit",
    "medic-doctor",
    "medic-init",
    "medic-lib",
    "medic-outdated",
    "medic-run",
    "medic-shipit",
    "medic-src",
    "medic-test",
    "medic-update",
]
resolver = "2"


[workspace.dependencies]
medic = { path = "./medic" }
medic-audit = { path = "./medic-audit" }
medic-doctor = { path = "./medic-doctor" }
medic-init = { path = "./medic-init" }
medic-lib = { path = "./medic-lib" }
medic-outdated = { path = "./medic-outdated" }
medic-run = { path = "./medic-run" }
medic-shipit = { path = "./medic-shipit" }
medic-src = { path = "./medic-src" }
medic-test = { path = "./medic-test" }
medic-update = { path = "./medic-update" }

arboard = "3.3"
clap = { version = "4.1.8", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
clap_complete = "4.1.4"
console = "0.15"
ctrlc = "3.4"
envsubst = "0.2"
indoc = "2.0.1"
once_cell = "1.21"
regex = "1.7"
retrogress = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
terminal-colorsaurus = "0.4"
toml = "0.8"
which = "8.0"


[workspace.package]
authors = ["Eric Saxby <sax@livinginthepast.org>", "synchonal.dev"]
description = "Development workflow automation/suggestion"
edition = "2021"
homepage = "https://github.com/synchronal"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/synchronal/medic-rs"
version = "2.15.0"
