[package]
name = "medic-audit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

medic-lib = { path = "../medic-lib" }
medic-step = { path = "../medic-step" }

[features]
# Treat warnings as a build error.
default = ["strict"]
strict = []
