[package]
name = "medic-audit"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
indoc = { workspace = true }
medic-src = { workspace = true }
retrogress = { workspace = true }

[features]
# Treat warnings as a build error.
default = ["strict"]
strict = []
