[package]
name = "medic-check-elixir"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
indoc = { workspace = true }
medic-lib = { path = "../medic-lib" }

[features]
# Treat warnings as a build error.
default = ["strict"]
strict = []
