[package]
name = "medic-doctor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2"
clap = { version = "4.1.8", features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
clap_complete = "4.1.4"
indoc = "2.0.1"
medic-lib = { path = "../medic-lib" }

[features]
# Treat warnings as a build error.
default = ["strict"]
strict = []
