[package]
name = "medic-doctor"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true


[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
console = { workspace = true }
ctrlc = { workspace = true }
indoc = { workspace = true }
medic-src = { workspace = true }
retrogress = { workspace = true }


[features]
default = ["strict"] # Treat warnings as a build error.
strict = []
