[package]
name = "medic-init"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true


[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
envsubst = { workspace = true }
medic-src = { workspace = true }


[features]
default = ["strict"] # Treat warnings as a build error.
strict = []

