[package]
authors = ["Eric Saxby", "synchronal.dev"]
description = "Helpers for writing checks and steps for medic"
edition = "2021"
homepage = "https://github.com/synchronal/medic-rs"
license = "MIT"
name = "medic-lib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}

[features]
# Treat warnings as a build error.
default = ["strict"]
strict = []
