[package]
description = "Helpers for writing checks and steps for medic"
name = "medic-lib"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true}

[features]
# Treat warnings as a build error.
default = ["strict"]
strict = []
