[package]
description = "Helpers for writing checks and steps for medic"
name = "medic-lib"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true}


[features]
default = ["strict"] # Treat warnings as a build error.
strict = []
