[package]
name = "medic-run"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
indoc = { workspace = true }
medic-src = { workspace = true }
retrogress = { workspace = true }


[features]
default = ["strict"] # Treat warnings as a build error.
strict = []
