[package]
name = "medic-shipit"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
clap_complete = { workspace = true }
indoc = { workspace = true }
medic-src = { path = "../medic-src" }

[features]
# Treat warnings as a build error.
default = ["strict"]
strict = []
