[package]
name = "medic-src"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true


[dependencies]
arboard = "3.2"
console = { workspace = true }
envsubst = { workspace = true }
retrogress = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
which = { workspace = true }


[features]
default = ["strict"] # Treat warnings as a build error.
strict = []
