[package]
name = "medic-update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
clap_complete = { workspace = true }
indoc = { workspace = true }
medic-lib = { path = "../medic-lib" }

[features]
# Treat warnings as a build error.
default = ["strict"]
strict = []
