[package]
name = "medic"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
clap_complete = { workspace = true }
indoc = { workspace = true }
medic-audit = { path = "../medic-audit" }
medic-doctor = { path = "../medic-doctor" }
medic-init = { path = "../medic-init" }
medic-shipit = { path = "../medic-shipit" }
medic-src = { path = "../medic-src" }
medic-test = { path = "../medic-test" }
medic-update = { path = "../medic-update" }

[features]
# Treat warnings as a build error.
default = ["strict"]
strict = []

