[package]
name = "medic"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
indoc = { workspace = true }
medic-audit = { workspace = true }
medic-doctor = { workspace = true }
medic-init = { workspace = true }
medic-shipit = { workspace = true }
medic-src = { workspace = true }
medic-test = { workspace = true }
medic-update = { workspace = true }

[features]
# Treat warnings as a build error.
default = ["strict"]
strict = []

