[package]
name = "medic"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true


[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
console = { workspace = true }
ctrlc = { workspace = true }
indoc = { workspace = true }
medic-audit = { workspace = true }
medic-doctor = { workspace = true }
medic-init = { workspace = true }
medic-outdated = { workspace = true }
medic-run = { workspace = true }
medic-shipit = { workspace = true }
medic-src = { workspace = true }
medic-test = { workspace = true }
medic-update = { workspace = true }
retrogress = { workspace = true }


[features]
default = ["strict"] # Treat warnings as a build error.
strict = []

